--- a/anchor.html
+++ b/anchor.html
@@ -4,46 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather app</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Baltimore, USA</h1>
-      <ul>
+   <div class="container">
+    <div class="weather-app-whapper">
+     <div class="weather-app">
+      <div class="overview">
+       <h1 id="city"></h1>
+        <ul>
           <li>
               Wednesday
           </li>
-          <li>
-              Cloudy
+          <li id="description">
           </li>
-      </ul>
-    <div class="row">
-    <div class="col-6">
-    <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloudy">
-    56°C | F
-    </div>
-    <div class="col-6">
-        <ul>
-            <li>
+       </ul>
+      </div>
+      <div class="row">
+       <div class="col-6">
+        <div class="clearfix wheather-temperature">
+          <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloudy" class="float-left">
+          <div class="float-left">
+            <strong id="temperature"></strong><span class="unit"> °F | <a href="#"></a> °C </span>
+          </div>
+        </div>
+      </div>
+        <div class="col-6">
+          <ul>
+              <li>
                 preciptation:38%
-            </li>
-            <li>
+              </li>
+              <li>
                 huminity:0%
-            </li>
-            <li>
+              </li>
+              <li>
                 wind:24 km/h
-            </li>
-        </ul>
+              </li>
+          </ul>
+        </div>
+      </div>
     </div>
-
-    <a href="" class="btn btn-primary">Click me</a>
+    <small>
+      open-source code by Anne
+    </small>
     </div>
     <script src="src/app.js"></script>
   </body>
