--- a/anchor.html
+++ b/anchor.html
@@ -21,9 +21,7 @@
       <div class="overview">
        <h1 id="city"></h1>
         <ul>
-          <li>
-              Wednesday
-          </li>
+          <li id="date"></li>
           <li id="description">
           </li>
        </ul>
@@ -43,11 +41,9 @@
                 preciptation:38%
               </li>
               <li>
-                huminity:0%
-              </li>
+                huminity:<span id="huminity"></span> % </li>
               <li>
-                wind:24 km/h
-              </li>
+                wind:<span id="wind"></span>km/h</li>
           </ul>
         </div>
       </div>
