--- a/anchor.html
+++ b/anchor.html
@@ -18,6 +18,16 @@
    <div class="container">
     <div class="weather-app-whapper">
      <div class="weather-app">
+      <form id="search-form" class="mb-3">
+        <div class="row">
+         <div class="col-9"
+          <input type="search" placeholder="type a city...." class="form-control" id="city-input" autocomplete="off"/>
+         </div>
+         <div class="col-3"
+          <input type="submit" value="search" class="btn btn-primary" w-100 />
+         </div>
+        </div>
+      </form>
       <div class="overview">
        <h1 id="city"></h1>
         <ul>
@@ -29,7 +39,7 @@
       <div class="row">
        <div class="col-6">
         <div class="clearfix wheather-temperature">
-          <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloudy" class="float-left">
+          <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloudy" id="icon" class="float-left">
           <div class="float-left">
             <strong id="temperature"></strong><span class="unit"> °F | <a href="#"></a> °C </span>
           </div>
