--- a/anchor.html
+++ b/anchor.html
@@ -41,7 +41,7 @@
         <div class="clearfix wheather-temperature">
           <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloudy" id="icon" class="float-left">
           <div class="float-left">
-            <strong id="temperature"></strong><span class="unit"> °F | <a href="#"></a> °C </span>
+            <strong id="temperature"></strong><span class="unit"> <a href="#" id="celsius-link" class="active"> °C </a> | <a href="#" id="fahrenheit-link"> °F </a></span>
           </div>
         </div>
       </div>
